--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "isomorphic-style-loader": "1.0.0",
     "jade": "1.11.0",
     "jsonwebtoken": "5.7.0",
+    "lodash": "^4.12.0",
     "markdown-it": "6.0.1",
     "node-fetch": "1.5.1",
     "normalize.css": "4.1.1",
